--- a/package.json
+++ b/package.json
@@ -9,12 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "firebase": "^9.12.1",
     "next": "12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sass": "^1.55.0"
   },
   "devDependencies": {
+    "@types/node": "^18.11.0",
+    "@types/react": "^18.0.21",
+    "@zeit/next-sass": "^1.0.1",
     "eslint": "8.25.0",
-    "eslint-config-next": "12.3.1"
+    "eslint-config-next": "12.3.1",
+    "node-sass": "^7.0.3",
+    "typescript": "^4.8.4"
   }
 }
