--- a/package.json
+++ b/package.json
@@ -6,22 +6,38 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "classnames": "^2.3.2",
     "firebase": "^9.12.1",
     "next": "12.3.1",
+    "phosphor-react": "^1.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.55.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.19.3",
+    "@storybook/addon-actions": "^6.5.12",
+    "@storybook/addon-essentials": "^6.5.12",
+    "@storybook/addon-interactions": "^6.5.12",
+    "@storybook/addon-links": "^6.5.12",
+    "@storybook/builder-webpack5": "^6.5.12",
+    "@storybook/manager-webpack5": "^6.5.12",
+    "@storybook/preset-scss": "^1.0.3",
+    "@storybook/react": "^6.5.12",
+    "@storybook/testing-library": "^0.0.13",
     "@types/node": "^18.11.0",
     "@types/react": "^18.0.21",
-    "@zeit/next-sass": "^1.0.1",
+    "babel-loader": "^8.2.5",
+    "css-loader": "^6.7.1",
     "eslint": "8.25.0",
     "eslint-config-next": "12.3.1",
-    "node-sass": "^7.0.3",
+    "eslint-plugin-storybook": "^0.6.6",
+    "style-loader": "^3.3.1",
     "typescript": "^4.8.4"
   }
 }
