--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint": "8.25.0",
     "eslint-config-next": "12.3.1",
     "eslint-plugin-storybook": "^0.6.6",
+    "sass-loader": "^13.1.0",
     "style-loader": "^3.3.1",
     "typescript": "^4.8.4"
   }
