--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@storybook/builder-webpack5": "^6.5.12",
     "@storybook/manager-webpack5": "^6.5.12",
     "@storybook/preset-scss": "^1.0.3",
+    "@storybook/preset-typescript": "^3.0.0",
     "@storybook/react": "^6.5.12",
     "@storybook/testing-library": "^0.0.13",
     "@types/node": "^18.11.0",
@@ -37,8 +38,10 @@
     "eslint": "8.25.0",
     "eslint-config-next": "12.3.1",
     "eslint-plugin-storybook": "^0.6.6",
-    "sass-loader": "^13.1.0",
+    "fork-ts-checker-webpack-plugin": "^7.2.13",
+    "sass-loader": "10.2.0",
     "style-loader": "^3.3.1",
+    "ts-loader": "^9.4.1",
     "typescript": "^4.8.4"
   }
 }
