--- a/package.json
+++ b/package.json
@@ -27,15 +27,18 @@
     "@storybook/addon-links": "^6.5.13",
     "@storybook/builder-webpack5": "^6.5.13",
     "@storybook/manager-webpack5": "^6.5.13",
+    "@storybook/preset-scss": "^1.0.3",
     "@storybook/react": "^6.5.13",
     "@storybook/testing-library": "^0.0.13",
     "@types/node": "^18.11.0",
     "@types/react": "^18.0.21",
     "babel-loader": "^8.2.5",
+    "css-loader": "^6.7.1",
     "eslint": "8.25.0",
     "eslint-config-next": "12.3.1",
     "eslint-plugin-storybook": "^0.6.6",
-    "sass-loader": "10.2.0",
+    "sass-loader": "^13.1.0",
+    "style-loader": "^3.3.1",
     "typescript": "^4.8.4"
   }
 }
