Storybook darkmode, and some examples

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "phosphor-react": "^1.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sass": "^1.55.0"
+    "sass": "^1.55.0",
+    "storybook-dark-mode": "^1.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
