--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "classnames": "^2.3.2",
     "firebase": "^9.12.1",
     "next": "12.3.1",
+    "nextjs-progressbar": "^0.0.16",
     "phosphor-react": "^1.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
