--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   },
   "dependencies": {
     "classnames": "^2.3.2",
+    "date-fns": "^2.29.3",
     "firebase": "^9.12.1",
     "next": "12.3.1",
     "nextjs-progressbar": "^0.0.16",
     "phosphor-react": "^1.4.1",
     "react": "18.2.0",
+    "react-day-picker": "^8.3.5",
     "react-dom": "18.2.0",
     "sass": "^1.55.0",
     "storybook-dark-mode": "^1.1.2"
