--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "react": "18.2.0",
     "react-day-picker": "^8.3.5",
     "react-dom": "18.2.0",
-    "sass": "^1.55.0",
-    "storybook-dark-mode": "^1.1.2"
+    "sass": "^1.55.0"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
@@ -42,6 +41,7 @@
     "eslint-config-next": "12.3.1",
     "eslint-plugin-storybook": "^0.6.6",
     "sass-loader": "^13.1.0",
+    "storybook-dark-mode": "^1.1.2",
     "style-loader": "^3.3.1",
     "typescript": "^4.8.4"
   }
