--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,6 +38,8 @@
     "**/*.tsx"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "**/*.stories.mdx",
+    "**/*.stories.@(js|jsx|ts|tsx)",
   ]
 }
