--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@faker-js/faker": "^7.6.0",
+    "chart.js": "^3.9.1",
     "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
     "firebase": "^9.12.1",
@@ -18,6 +20,7 @@
     "nextjs-progressbar": "^0.0.16",
     "phosphor-react": "^1.4.1",
     "react": "18.2.0",
+    "react-chartjs-2": "^4.3.1",
     "react-day-picker": "^8.3.5",
     "react-dom": "18.2.0",
     "sass": "^1.55.0"
