Transactions page UX change, Recoil added, usePagination hook

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,7 @@
       "@hooks/*": ["hooks/*"],
       "@molecules/*": ["components/molecules/*"],
       "@organisms/*": ["components/organisms/*"],
+      "@recoil/*": ["recoil/*"],
       "@styles/*": ["styles/*"],
       "@templates/*": ["components/templates/*"],
       "@utils/*": ["utils/*"]
