--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-chartjs-2": "^4.3.1",
     "react-day-picker": "^8.3.5",
     "react-dom": "18.2.0",
+    "recoil": "^0.7.6",
     "sass": "^1.55.0"
   },
   "devDependencies": {
