--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
     "firebase": "^9.12.1",
+    "iron-session": "^6.3.1",
+    "jsonwebtoken": "^8.5.1",
     "next": "12.3.1",
     "nextjs-progressbar": "^0.0.16",
     "phosphor-react": "^1.4.1",
@@ -37,6 +39,7 @@
     "@storybook/preset-scss": "^1.0.3",
     "@storybook/react": "^6.5.13",
     "@storybook/testing-library": "^0.0.13",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.11.0",
     "@types/react": "^18.0.21",
     "babel-loader": "^8.2.5",
