--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
     "firebase": "^9.12.1",
+    "firebase-admin": "^11.3.0",
     "iron-session": "^6.3.1",
     "jsonwebtoken": "^8.5.1",
     "next": "12.3.1",
