--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
   "dependencies": {
     "chart.js": "^3.9.1",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.13.2",
+    "class-validator": "^0.14.0",
     "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
     "firebase": "^9.14.0",
     "iron-session": "^6.3.1",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^6.9.1",
-    "next": "12.3.1",
+    "next": "^14.0.2",
     "nextjs-progressbar": "^0.0.16",
     "phosphor-react": "^1.4.1",
     "react": "18.2.0",
@@ -34,13 +34,13 @@
   "devDependencies": {
     "@babel/core": "^7.19.3",
     "@storybook/addon-actions": "^6.5.13",
-    "@storybook/addon-essentials": "^6.5.13",
+    "@storybook/addon-essentials": "^7.5.3",
     "@storybook/addon-interactions": "^6.5.13",
     "@storybook/addon-links": "^6.5.13",
     "@storybook/builder-webpack5": "^6.5.13",
     "@storybook/manager-webpack5": "^6.5.13",
     "@storybook/preset-scss": "^1.0.3",
-    "@storybook/react": "^6.5.13",
+    "@storybook/react": "^7.5.3",
     "@storybook/testing-library": "^0.0.13",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.11.0",
